javaweb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: javawebapp
 namespace: beta
spec: 
 replicas: 3
 selector:
  matchLabels:
   app: javaweb
 strategy:
  type: RollingUpdate
  rollingUpdate:
   maxSurge: 1
   maxUnavailable: 1
 minReadySeconds: 30
 template:
  metadata:
   labels:
     app: javaweb
  spec:
   containers:
   - name: javawebcontainer
     image: bharathreddymbr/javawebapp:1
     port:
     - containerPort: 8080
     resources:
       requests:
         cpu: 250m
         memory: 250Mi
       limits:
         cpu: 300m
         memory: 300Mi
     livenessProbe:
       httpGet:
        path: /java-web-app/
        port: 8080
       initialDelaySeconds: 60
       periodSeconds: 40
       timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: javawebsvc
  namespace: beta
spec:
 type: LoadBalancer
 selector: 
  app: javaweb
 ports:
 - port: 80
   targetPort: 8080
