mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  namespace: beta 
spec:
 type: ClusterIP
 selector:
  app: mongodb
 ports:
 - port: 27017
   targetPort: 27017
