springapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springappdep
  namespace: beta
spec:
 replicas: 2
 selector:
  matchLabels:
   app: springapp
 strategy:
  type: RollingUpdate
  rollingUpdate:
   maxSurge: 1
   maxUnavailable: 1
 minReadySeconds: 30
 template:
  metadata:
   labels:
    app: springapp
  spec:
    containers:
    - name: springappcontainer
      image: bharathreddymbr/spring-boot-app:1
      ports:
      - containerPort: 8080
      resources:
       requests:
        cpu: 250m
        memory: 250Mi
       limits:
        cpu: 300m
        memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: springappsvc
  namespace: beta
spec:
 type: LoadBalancer
 selector:
  app: springapp
 ports:
 - port: 80
   targetPort: 8080
